# insurance-cv

./: CHANGELOG.md  README.md  pyproject.toml  run_tests_databricks.py
.github/workflows/: docs.yml
benchmarks/: benchmark.py
examples/: motor_walkforward.py
notebooks/: benchmark.py  demo_insurance_cv.py  quickstart.ipynb  run_tests.ipynb  run_tests.py
src/insurance_cv/: __init__.py  diagnostics.py  distributional.py  feature_selection.py  splits.py
tests/: test_distributional.py  test_feature_selection.py  test_splits.py
