[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-cv"
version = "0.2.2"
description = "Temporal cross-validation for insurance pricing models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = ["insurance", "cross-validation", "pricing", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "polars>=1.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "pyarrow>=12.0"]

[project.urls]
Repository = "https://github.com/burning-cost/insurance-cv"
Issues = "https://github.com/burning-cost/insurance-cv/issues"
Homepage = "https://github.com/burning-cost/insurance-cv"
Documentation = "https://github.com/burning-cost/insurance-cv#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_cv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
